# Vortex-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
depricated/: compile.cpp  llvmcompiler.cpp
src/: IR.h  JIT.h  Value.h  compile.cpp  compiler.cpp  example.vtex  generator.cpp  keywords.h  llvmcompiler.cpp  operators.h  tcom.cpp  tokens.h  types.h  value.h  vstring.h
tools/: README.md  linux-win64.cmake
